--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           </div>
 
           <div class="main__blog-content-sentense">
-            <p>WebサイトでSEO内部施策に適したコー<br>ディングでどれぐらいサイトが早くなるの<br>か検証してみました</p>
+            <p>WebサイトでSEO内部施策に適したコーディングでどれぐらいサイトが早くなるのか検証してみました</p>
           </div>
 
           <div class="main__blog-content-date">
@@ -289,7 +289,7 @@
           </div>
 
           <div class="main__blog-content-sentense">
-            <p>ユアコーディングではデザイナーの方を<br>広く募集しています。</p>
+            <p>ユアコーディングではデザイナーの方を広く募集しています。</p>
           </div>
 
           <div class="main__blog-content-date">
