--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>ユアコーディング</title>
+    <title>cording</title>
     <meta name="description" content="コーディングの時間を減らしてウェブデザインに力を入れよう">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
