--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>ユアコーディング</title>
-    <meta name="description" content="コーディングの時間を減らしてウェブデザインに力を入れよう">
+    <title>cording</title>
+    <meta name="description" content="strength of cording">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
@@ -38,15 +38,15 @@
         <div class="header__contents">
 
           <div class="header__content-feature">
-            <p>特徴</p>
+            <p>feature</p>
           </div>
 
           <div class="header__content-value">
-            <p>価格</p>
+            <p>price</p>
           </div>
 
           <div class="header__content-form">
-            <p>お問い合わせ</p>
+            <p>contact</p>
           </div>
 
         </div>
@@ -54,7 +54,7 @@
         <div class="formButton-block header__formButton">
 
           <div class="form-Button">
-            <p>お問い合わせ</p>
+            <p>contact</p>
           </div>
 
         </div>
@@ -67,9 +67,9 @@
           <div class="ham-menu__contents">
             <p>menu</p>
           <ul class="ham-menu__content">
-            <li class="ham-menu__content-feature">特徴</li>
-            <li class="ham-menu__content-value">価格</li>
-            <li class="ham-menu__content-form">お問い合わせ</li>
+            <li class="ham-menu__content-feature">feature</li>
+            <li class="ham-menu__content-value">price</li>
+            <li class="ham-menu__content-form">contact</li>
           </ul>
 
           <img class="ham__menu-close" src="icon_11911_icon_119110_256.png" alt="">
