--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
       <div class="main__top-left">
 
         <div class="main__top-left-text-title">
-          <h3>コーディングの手間を<br>最小に、デザインに注力<br>する助けに</h3>
+          <h3>we<br>can support<br>you</h3>
         </div>
 
         <div class="main__top-left-text-sentence">
-          <p>ユアコーディングはコーディングに<br>特化したフリーランス<br>デザインに注力されたい方の<br>助けになります</p>
+          <p>Our service <br>is to help <br>you<br>with our cording</p>
         </div>
 
         <div class="formButton-block main__top-formButton">
 
           <div class="form-Button">
-            <p>お問い合わせ</p>
+            <p>Contact</p>
           </div>
 
         </div>
@@ -120,13 +120,13 @@
     <div class="main__feature">
 
       <div class="main__feature-title main__title">
-        <h2>ユアコーディング3つの特徴</h2>
+        <h2>the three fertures of our service</h2>
         <p>FEATURES</p>
       </div>
 
       <div data-aos="zoom-in-up" data-aos-duration="2000" class="main__feature-title-contents">
         <div class="main__feature-title-contents-title">
-          <h3>高速コーディング</h3>
+          <h3>high speed cording</h3>
         </div>
 
         <div class="main__feature-title-content">
@@ -136,8 +136,8 @@
           </div>
 
           <div class="main__feature-title-content-right">
-            <h6>コーディングに特化したフリーランスのため、スピード感を持った開発が可能。</h6>
-            <p>開発は常にスピードとの勝負です。ユアコーディングはコーディングに特化しているため、素早く納品することで、クライアントがデザインに注力<br>する助けとなります。</p>
+            <h6>Because it is a freelance specializing in coding, it is possible to develop with high speed.</h6>
+            <p>Development is always a race against speed. YourCoding specializes in coding,<br>so delivering quickly helps clients focus on design.</p>
           </div>
 
         </div>
@@ -145,14 +145,14 @@
 
       <div data-aos="zoom-in-up" data-aos-duration="2000" class="main__feature-title-contents">
         <div class="main__feature-title-contents-title">
-          <h3>高品質</h3>
+          <h3>high-quality</h3>
         </div>
 
         <div class="main__feature-title-content-build main__feature-title-content">
 
           <div class="main__feature-title-content-left">
-            <h6>正しいマークアップで、内部SEOに強いコーディングをデフォルトで行います。</h6>
-            <p>ユアコーディングでは、「予測しやすい」「再利用しやすい」「保守しやすい」「拡張しやすい」と言った設計をもとにきちんとコーディングを行うため、納品後も安心です。</p>
+            <h6>Internal SEO-friendly coding by default with correct markup.</h6>
+            <p>At YourCoding, we code properly based on a design that is "easy to predict," "easy to reuse," "easy to maintain," and "easy to expand," so you can rest assured even after delivery.</p>
           </div>
 
           <div class="main__feature-title-content-right">
@@ -164,7 +164,7 @@
 
       <div data-aos="zoom-in-up" data-aos-duration="2000" class="main__feature-title-contents">
         <div class="main__feature-title-contents-title">
-          <h3>迅速なレスポンス</h3>
+          <h3>fast response</h3>
         </div>
 
         <div class="main__feature-title-content">
@@ -174,8 +174,8 @@
           </div>
 
           <div class="main__feature-title-content-right">
-            <h6>原則いただいたメッセージは、業務時間内であれば6時間以内にお返しいたします。</h6>
-            <p>連絡を返さないフリーランスが多い中、ユアコーディングでは定期的な進捗報告など、社会人としての基本を踏まえて仕事を行なっております。</p>
+            <h6>In principle, we will reply to your message within 6 hours during business hours.</h6>
+            <p>While there are many freelancers who do not return calls, at Your Coding, we work based on the basics as a member of society, such as regular progress reports.</p>
           </div>
 
         </div>
@@ -185,7 +185,7 @@
     <div class="main__value">
 
       <div class="main__value-title main__title">
-        <h2>価格</h2>
+        <h2>Prise of service</h2>
         <p>PRISE</p>
       </div>
 
@@ -193,58 +193,58 @@
         <table>
 
         <tr>
-          <th>HTMLコーディングトップページ</th>
-          <td>30.000円〜</td>
+          <th>HTML coding top page</th>
+          <td>$300〜</td>
         </tr>
 
         <tr>
-          <th>HTMLコーディング下層1ページ</th>
-          <td>10.000円〜</td>
+          <th>HTML coding lower layer 1 page</th>
+          <td>$100〜</td>
         </tr>
 
         <tr>
-          <th>HTML+WordPressトップページ</th>
-          <td>55.000円〜</td>
+          <th>HTML+WordPress top page</th>
+          <td>$550〜</td>
         </tr>
 
         <tr>
-          <th>HTML+WordPress下層1ページ</th>
-          <td>15.000円〜</td>
+          <th>HTML + WordPress lower layer 1 page</th>
+          <td>$150〜</td>
         </tr>
 
         </table>
       </div>
 
       <div class="main__value-sentense">
-        <p>＊詳細な価格はページや仕様によって異なります</p>
+        <p>＊Detailed prices vary depending on pages and specifications</p>
       </div>
 
     </div>
 
     <div class="main__faq">
       <div class="main__faq-title main__title">
-        <h2>よくある質問</h2>
+        <h2>Question</h2>
         <p>FAQ</p>
       </div>
 
 
         <dl data-aos="zoom-in-up" data-aos-duration="2000" class="main__faq-contents">
 
-          <dt class="open" href ="#acc1">デザインから一貫してお願いすることは可能でしょうか</dt>
-          <dd id="acc1">ユアコーディングはコーディングに特化したサービスですので、デザインからお受けすることは基本的にありません。ただデザインを行う際は提携しているデザイナーと連携して対応させていただきますので、別途ご連絡ください。</dd>
+          <dt class="open" href ="#acc1">Is it possible to ask for everything from the design stage?</dt>
+          <dd id="acc1">Your Coding is a service that specializes in coding, so we basically do not accept requests from the design stage. However, when designing, we will work with a partner designer, so please contact us separately.</dd>
 
-          <dt class="open" href ="#acc2">WordPressのカスタマイズをお願いすることも可能でしょうか？</dt>
-          <dd id="acc2">可能です。ただECサイトなどの場合は構築難易度や工数の関係で綿密にヒアリングさせていただきたく思います。</dd>
+          <dt class="open" href ="#acc2">Is it possible to ask for customization of WordPress?</dt>
+          <dd id="acc2">Is possible. However, in the case of EC sites, etc., we would like to conduct a detailed hearing regarding the difficulty of construction and the number of man-hours required.</dd>
 
-          <dt class="open" href ="#acc3">コーディングのスピード感が知りたい</dt>
-          <dd id="acc3">HTMLレスポンシブ込み5ページで1週間、10ページで2週間、WordPressサイト5ページで2週間、10ページで3週間が目安に<br>なります。</dd>
+          <dt class="open" href ="#acc3">I want to know the speed of coding</dt>
+          <dd id="acc3">1 week for 5 pages including HTML responsive, 2 weeks for 10 pages, 2 weeks for 5 pages for WordPress site, 3 weeks for 10 pages.</dd>
         </dl>
 
     </div>
 
     <div class="main__blog">
       <div class="main__blog-title main__title">
-        <h2>ブログ</h2>
+        <h2>Blog</h2>
         <p>BLOG</p>
       </div>
 
@@ -257,11 +257,11 @@
           </div>
 
           <div class="main__blog-content-sentense">
-            <p>サイトをリニューアルオープンしました。</p>
+            <p>The site has been renewed.</p>
           </div>
 
           <div class="main__blog-content-date">
-            <p>2020.01.23</p>
+            <p>2023.02.10</p>
           </div>
 
         </div>
@@ -273,11 +273,11 @@
           </div>
 
           <div class="main__blog-content-sentense">
-            <p>WebサイトでSEO内部施策に適したコーディングでどれぐらいサイトが早くなるのか検証してみました</p>
+            <p>I tried to verify how much the site speeds up with coding suitable for SEO internal measures on the website</p>
           </div>
 
           <div class="main__blog-content-date">
-            <p>2020.01.24</p>
+            <p>2023.02.09</p>
           </div>
 
         </div>
@@ -289,7 +289,7 @@
           </div>
 
           <div class="main__blog-content-sentense">
-            <p>ユアコーディングではデザイナーの方を広く募集しています。</p>
+            <p>YourCoding is actively looking for designers.</p>
           </div>
 
           <div class="main__blog-content-date">
@@ -305,27 +305,27 @@
     <div class="main__works">
 
       <div class="main__blog-title main__title">
-        <h2>制作実績</h2>
+        <h2>Production record</h2>
         <p>WORKS</p>
       </div>
 
 <div data-aos="zoom-in-up" data-aos-duration="2000" class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide swiper-slide-digital"><img src ="digital-marketing-1433427_1280.jpg">
-      <h4>株式会社サンプル様採用サイトのコーディングを行いました！</h4>
-      <p>採用技術：jQuery,Bootstrap4<br>実装期間：2週間<br>担当コーダー：石井</p>
+      <h4>We coded the recruitment site of Sample!</h4>
+      <p>Adopted technology: jQuery, Bootstrap4<br>Implementation period: 2 weeks<br>Coder : Ishii</p>
     </div>
     <div class="swiper-slide swiper-slide-flower"><img src ="arnel-hasanovic-MNd-Rka1o0Q-unsplash.jpg">
-      <h4>株式会社サンプル様採用サイトのコーディングを行いました！</h4>
-      <p>採用技術：jQuery,Bootstrap4<br>実装期間：2週間<br>担当コーダー：石井</p>
+      <h4>We coded the recruitment site of Sample!</h4>
+      <p>Adopted technology: jQuery,Bootstrap4<br>Implementation period: 2 weeks<br>Coder : Ishii</p>
     </div>
     <div class="swiper-slide swiper-slide-digital"><img src ="digital-marketing-1433427_1280.jpg">
-      <h4>株式会社サンプル様採用サイトのコーディングを行いました！</h4>
-      <p>採用技術：jQuery,Bootstrap4<br>実装期間：2週間<br>担当コーダー：石井</p>
+      <h4>We coded the recruitment site of Sample!</h4>
+      <p>Adopted technology: jQuery,Bootstrap4<br>Implementation period: 2 weeks<br>Coder : Ishii</p>
     </div>
     <div class="swiper-slide swiper-slide-dez"><img src ="hal-gatewood-tZc3vjPCk-Q-unsplash.jpg">
-      <h4>株式会社サンプル様採用サイトのコーディングを行いました！</h4>
-      <p>採用技術：jQuery,Bootstrap4<br>実装期間：2週間<br>担当コーダー：石井</p>
+      <h4>We coded the recruitment site of Sample!</h4>
+      <p>Adopted technology: jQuery,Bootstrap4<br>Implementation period: 2 weeks<br>Coder : Ishii</p>
     </div>
 
   </div>
@@ -343,42 +343,42 @@
 
     <div class="main__contact">
       <div class="main__contact-title main-title">
-        <h3>お問い合わせ</h3>
+        <h3>Contact</h3>
         <p>CONTACT</p>
-        <h2>コーディングの人出が足りないとき、<br>あなたの力になります</h2>
+        <h2>When you're short on coding people,<br>we're here to help</h2>
       </div>
 
 
     <div data-aos="zoom-in-up" data-aos-duration="2000" class="main__contact-form">
 
       <div class="main__contact-form-sentense main__contact-form-sentense-name">
-        <h6>お名前</h6>
-        <p>必須</p>
+        <h6>name</h6>
+        <p>Required</p>
       </div>
       <input type="text" name="" value="">
 
       <div class="main__contact-form-sentense main__contact-form-sentense-mail">
-        <h6>メールアドレス</h6>
-        <p>必須</p>
+        <h6>mail adress</h6>
+        <p>Required</p>
       </div>
       <input type="email" name="" value="">
 
       <div class="main__contact-form-sentense main__contact-form-sentense-question">
-        <h6>お問い合わせ内容</h6>
-        <p>必須</p>
+        <h6>content</h6>
+        <p>Required</p>
       </div>
 
       <textarea name="message" rows="8" cols="80"></textarea>
 
       <p class="agree"><input type="checkbox" name="agreement" id="agreement" value="">
-        <label for="agreement">プライバシーポリシーに同意する</label></p>
+        <label for="agreement">I agree to the privacy policy</label></p>
 
         <div class="agree-aleart">
-          <p>※プライバシーポリシーポリシーに同意してください</p>
+          <p>※Please agree to the privacy policy</p>
         </div>
 
         <div class="form-Button main__contact-Button">
-          <p>送信する</p>
+          <p>SUBMIT</p>
         </div>
 
       </div>
@@ -387,22 +387,22 @@
     <footer>
       <div class="footer">
 
-        <h3>ユアコーディング</h3>
+        <h3>Your cording</h3>
 
         <div class="footer__items">
 
           <div class="footer__item footer__item-privacy">
-            <p>プライバシーポリシー</p>
+            <p>privacy policy</p>
           </div>
 
           <div class="footer__item footer__item-privacy-deal">
-            <p>個人商取引法に基づく表記</p>
+            <p>Notation based on the Act on Personal Commercial Transactions</p>
           </div>
 
         </div>
 
         <div class="footer-tag">
-          <p><small>&copy;ユアコーディング, All Rights Reserved.</p>
+          <p><small>&copy;Your cording, All Rights Reserved.</p>
         </div>
 
       </div>
